Updated leaderboard section of website to fix (sub) page links with fixes imported from MMRPG World.
The numbered links for the different pages of the leaderboard were overflowing over each other and other links so they had to be reformatted and styled.

--- a/styles/leaderboard.css
+++ b/styles/leaderboard.css
@@ -5,12 +5,6 @@
   background-color: transparent;
   width: 762px;
 }
-#mmrpg.windowFlag_landscapeMode,
-#mmrpg.mobileFlag_landscapeMode,
-#mmrpg.windowFlag_landscapeMode #prototype,
-#mmrpg.mobileFlag_landscapeMode #prototype {
-  width: 1024px;
-}
 #prototype .header {
   width: 100%;
 }
@@ -27,24 +21,20 @@
 }
 #prototype .leaderboard .wrapper {
   display: block;
-  height: 284px; 
-  overflow: scroll; 
+  height: 284px;
+  overflow: scroll;
   overflow-x: hidden;
   margin-right: -17px;
   padding-right: 3px;
   padding-left: 3px;
 }
-body.windowFlag_landscapeMode #prototype .leaderboard .wrapper,
-body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
-  padding-left: 0;
-}
 #prototype .leaderboard .wrapper_full {
-  height: auto; 
+  height: auto;
   overflow: hidden;
 }
 
 #prototype .leaderboard .inner_wrapper {
-  height: auto; 
+  height: auto;
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.25);
   border-radius: 0.3em;
@@ -94,7 +84,7 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
       center bottom,
       rgba(0, 0, 0, 0.05) 15%,
       rgba(255, 255, 255, 0.05) 75%
-  ); 
+  );
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -122,11 +112,11 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
   background-color: rgba(99, 61, 21, 0.75);
 }
 #prototype .leaderboard .file {
-  
+
 }
 
 #prototype .leaderboard .file {
-  
+
 }
 #prototype .leaderboard .file .inset {
   display: block;
@@ -151,11 +141,11 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
       center bottom,
       rgba(0, 0, 0, 0.45) 15%,
       rgba(0, 0, 0, 0.25) 75%
-  ); 
+  );
   box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.25);
-  overflow: hidden;  
+  overflow: hidden;
   position: relative;
 }
 #prototype .leaderboard .file .place,
@@ -167,7 +157,7 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
   letter-spacing: 2px;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap; 
+  white-space: nowrap;
 }
 #prototype .leaderboard .file .avatar {
   display: block;
@@ -234,19 +224,19 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
   display: block;
   float: left;
   clear: both;
-  width: 260px;  
-  line-height: 22px;   
+  width: 260px;
+  line-height: 22px;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;    
+  white-space: nowrap;
 }
 #prototype .leaderboard .file .userinfo .details {
   margin-top: 0;
   font-size: 10px;
-  line-height: 16px; 
+  line-height: 16px;
 }
 #prototype .leaderboard .file .robots {
-  display: block; 
+  display: block;
   float: left;
   overflow: hidden;
 }
@@ -254,11 +244,11 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
 #prototype .leaderboard .file .records {
   position: absolute;
   text-align: right;
-  width: 200px;
+  width: 260px;
   margin: 0;
   color: #F2F2F2;
   font-size: 18px;
-  line-height: 18px;  
+  line-height: 18px;
 }
 #prototype .leaderboard .file .points {
   top: 10px;
@@ -292,10 +282,10 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
 }
 
 #prototype .leaderboard .file .robots .sprite {
-  position: static; 
-  float: left; 
-  width: 16px; 
-  height: 16px; 
+  position: static;
+  float: left;
+  width: 16px;
+  height: 16px;
   background-size: 16px 16px;
 }
 #prototype .leaderboard .file .robots .sprite_base_80x80 {
@@ -304,16 +294,16 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
 }
 
 #prototype .leaderboard .more {
-  border: 0 none transparent; 
-  background-color: transparent; 
-  background-image: none; 
-  text-align: center; 
-  text-decoration: none; 
-  cursor: pointer; 
+  border: 0 none transparent;
+  background-color: transparent;
+  background-image: none;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
   _cursor: hand;
-  box-shadow: 0 0 0 transparent; 
-  -moz-box-shadow: 0 0 0 transparent; 
-  -webkit-box-shadow: 0 0 0 transparent; 
+  box-shadow: 0 0 0 transparent;
+  -moz-box-shadow: 0 0 0 transparent;
+  -webkit-box-shadow: 0 0 0 transparent;
   font-size: 10px;
   line-height: 10px;
   height: 10px;
@@ -325,4 +315,24 @@ body.mobileFlag_landscapeMode #prototype .leaderboard .wrapper {
 #prototype .leaderboard .container {
   display: block;
   margin: 5px auto 0;
+}
+
+
+/*
+ * MOBILE OVERRIDE STYLES
+ */
+
+/* -- Landscape Mode -- */
+@media (min-width: 1024px){
+
+  #mmrpg,
+  #mmrpg #prototype {
+    width: 1024px;
+  }
+  #prototype .leaderboard .wrapper {
+    padding-left: 0;
+  }
+
+
+
 }
